--- a/style.css
+++ b/style.css
@@ -2,18 +2,32 @@ body {
     background-color: #1d2d44;
 }
 
+.pdf {
+    width: 100%;
+    height: 600px;
+}
+
 h1,
 p,
 a,
 button,
 .nav-link,
-.tab-pane {
+.tab-pane,
+.nav-link:hover {
     color: #3e5c76;
 }
 
 .nav-pills .nav-link.active {
     background-color: #3e5c76;
     color: #f0ebd8;
+}
+
+.nav-link {
+    text-align: start;
+}
+
+.nav-link:hover {
+    outline: solid #3e5c76 5px;
 }
 
 #main-col {
